examples/test/testpolicy1361.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1361
  namespace: namespace359
spec:
  podSelector:
    matchLabels:
      key38: value48
      key2: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value25
          key30: value36
          key43: value2
      podSelector:
        matchLabels:
          key0: value4
          key8: value0
          key3: value9
